# oblox-fastapi-emails

./: .gitignore  README.md  pyproject.toml
src/fastapi_emails/: __init__.py  database.py
src/fastapi_emails/models/: base.py  task.py  templates.py
src/fastapi_emails/providers/: base.py  console.py  mailgun.py
src/fastapi_emails/repositories/: tasks.py  templates.py
src/fastapi_emails/routers/v1/: gcloud_task_executor_router.py
src/fastapi_emails/schemas/: emails.py  tasks.py
src/fastapi_emails/services/: emails.py
src/fastapi_emails/settings/: config.py
src/fastapi_emails/tasks/: emails.py
src/fastapi_emails/tasks/backends/: base.py  gcloud_tasks.py
